namespaces.yml
# Jenkins main namespace
apiVersion: v1
kind: Namespace
metadata:
 name: jenkins

---

# Jenkins pods namespaces where agents will be built
apiVersion: v1
kind: Namespace
metadata:
  name: build
