replica.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  serviceName: jenkins
  replicas: 1
  containers:
  - name: jenkins
    image: jenkins/jenkins:lts-alpine
    imagePullPolicy: Always
